[package]
name = "sbanken"
version = "0.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
description = "Rust API client for sbanken"
license = "AGPL-3.0"
documentation = "https://docs.rs/sbanken"
repository = "https://github.com/barskern/sbanken-rs"
readme = "README.md"
keywords = ["sbanken", "economy", "client"]
categories = ["api-bindings"]

[dependencies]
async-trait = { version = "0.1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "2.1"
urlencoding = "1"
reqwest = { version = "0.10.0", features = ["json"] }

[dev-dependencies]
